<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textAmount" />

        <EditText
            android:id="@+id/editAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="1234567890"
            android:inputType="number|numberDecimal" />

        <TextView
            android:id="@+id/textPax"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/numofPax" />

        <EditText
            android:id="@+id/editPax"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/toggleSVS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="ToggleButton"
                android:textOff="@string/svsDisabled"
                android:textOn="@string/svsEnabled" />

            <ToggleButton
                android:id="@+id/toggleGST"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="ToggleButton"
                android:textOff="@string/gstDisabled"
                android:textOn="@string/gstEnabled" />
        </LinearLayout>

        <TextView
            android:id="@+id/discountText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/discount" />

        <EditText
            android:id="@+id/editDiscount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

        <RadioGroup
            android:id="@+id/radioPay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioPaynow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paynow" />

            <RadioButton
                android:id="@+id/radioCash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/cash" />

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonSplit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/split" />

        <Button
            android:id="@+id/buttonReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/reset" />
    </LinearLayout>

    <TextView
        android:id="@+id/totalBill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/eachPays"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>